group 'livelessons'
version '1.0-SNAPSHOT'

apply plugin: 'java'

java.targetCompatibility = JavaVersion.VERSION_19
java.sourceCompatibility = JavaVersion.VERSION_19

compileJava {
    options.compilerArgs << '--enable-preview'
}

repositories {
    mavenCentral()
}

dependencies {
}
